--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vundle.git"]
-	path = vundle.git
-	rl = http://github.com/gmarik/vundle.git
+[submodule "vundle"]
+	path = vundle
+	url = https://github.com/gmarik/vundle.git
